Working on ordering messages by sending/receiving time and improing some details